BusOne/src/objects/Formulary_Products_vod__c.object
<CustomObject>
    <description>To display products in the formulary viewer, they must be entered into Formulary Product. Formulary product is referred to by Benefit Design Lines. Formulary product must be loaded before Benefit Design Lines.</description>
    <fields>
        <fullName>BOT_Account_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to store the related account plan.</description>
        <label>Plan Product Name</label>
        <referenceTo>Account_Plan_vod__c</referenceTo>
        <relationshipLabel>Plan Formulary</relationshipLabel>
        <relationshipName>Formulary_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BOT_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to store the associated Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Plan Formulary</relationshipLabel>
        <relationshipName>Formulary_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BOT_Benefit_Design__c</fullName>
        <description>To store the benefit design i.e. 2 tier or 3 tier</description>
        <label>Benefit Design</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_ChannelPBM__c</fullName>
        <description>Used to store the channel value of the PBM accounts</description>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BOT_Channel__c</fullName>
        <description>Used to display the channel</description>
        <formula>TEXT( BOT_Account_Plan__r.BOT_Channel__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Copay__c</fullName>
        <description>To store the copay for the selected Formulary benefit design</description>
        <label>Copay</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Formulary_ID__c</fullName>
        <description>Used to store the Formulary ID</description>
        <label>Formulary ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Formulary_Lives__c</fullName>
        <description>Used to store the Formulary lives value</description>
        <label>Total Formulary Lives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOT_Formulary_Name__c</fullName>
        <description>Used to store the name of the Formulary.</description>
        <label>Formulary Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Product_Type__c</fullName>
        <description>Used to store the Product type of the associated Plan Product</description>
        <formula>BOT_Account_Plan__r.BOT_Product_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Sales_force_SNo__c</fullName>
        <description>To store the Unique Sno for salesforce reference. Because there is no unique value in this object.</description>
        <label>Sales force SNo</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOT_Status__c</fullName>
        <description>To store the status for Formulary benefit design</description>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Total_Formulary_Lives__c</fullName>
        <description>To store the total formulary lives associated with all the products</description>
        <label>Total Formulary Lives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Competitor_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the product belongs to a competitor. If not, the product is assumed to be a company product and shows up in bold in the formulary viewer.</description>
        <label>Competitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID is only used for data loading.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Market_vod__c</fullName>
        <description>Market (such as Cholesterol Reducer) that this product belongs to.  This field is used as a filter in the formulary viewer.</description>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ACE Inhibitors</fullName>
                </value>
                <value>
                    <fullName>Allergy</fullName>
                </value>
                <value>
                    <fullName>Cholesterol Reducer</fullName>
                </value>
                <value>
                    <fullName>Dopaminergic Agents</fullName>
                </value>
                <value>
                    <fullName>Vasodilator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Formulary Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Formulary ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Formulary Products</pluralLabel>
    <recordTypes>
        <fullName>BOT_Formulary_Main_Screen</fullName>
        <active>true</active>
        <label>Formulary Main Screen</label>
    </recordTypes>
    <recordTypes>
        <fullName>Formulary_PBM</fullName>
        <active>true</active>
        <description>To store the PBM related formulary records</description>
        <label>Formulary PBM</label>
    </recordTypes>
    <recordTypes>
        <fullName>Formulary_Product</fullName>
        <active>true</active>
        <description>To store the formulary records</description>
        <label>Formulary Product</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>